Fix the layout issue for time-picker

--- a/Template/Website/wwwroot/styles/common/components/controls/date-input.scss
+++ b/Template/Website/wwwroot/styles/common/components/controls/date-input.scss
@@ -34,7 +34,7 @@
 
     .table-condensed {
         td {
-            width: 50%;
+            width: 25%;
         }
 
         [data-action=today] {
